Added initial log4j implementation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@695 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/build.properties
+++ b/net.sourceforge.eclipsetrader.core/build.properties
@@ -6,5 +6,5 @@ bin.includes = META-INF/,\
                epl-v10.html,\
                schema/,\
                icons/,\
-               lib/,\
-               plugin.properties
+               plugin.properties,\
+               lib/
