--- a/net.sourceforge.eclipsetrader.core/.classpath
+++ b/net.sourceforge.eclipsetrader.core/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-httpclient-3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
