Added exchange rate dialog
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@701 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -163,6 +163,12 @@
                toolbarPath="group6"
                tooltip="%refreshCurrenciesActionTooltip"/>
          <action
+               class="net.sourceforge.eclipsetrader.core.ui.actions.SetExchangeRateAction"
+               id="net.sourceforge.eclipsetrader.setExchangeRate"
+               label="Set Exchange Rate..."
+               menubarPath="additions"
+               style="push"/>
+         <action
                class="net.sourceforge.eclipsetrader.core.ui.actions.ConvertCurrencyAction"
                id="net.sourceforge.eclipsetrader.currencyConversion"
                label="%convertCurrencyAction"
