Added MA Channels indicator (feature req. #1535318)
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@704 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.properties
+++ b/net.sourceforge.eclipsetrader.charts/plugin.properties
@@ -88,6 +88,8 @@ indicator.name.VFI = Volume Flow Indicator - VFI
 preferencePage.title.VFI = Volume Flow Indicator
 indicator.name.UO = Ultimate Oscillator - UO
 preferencePage.title.UO = Ultimate Oscillator
+indicator.name.MACH = Moving Average Channels - MACH
+preferencePage.title.MACH = Moving Average Channels
 object.name.line = Line
 preferencePage.title.line = Line
 object.name.horizontalLine = Horizontal Line
