--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -6,6 +6,7 @@
    <extension-point id="patterns" name="%extension-point.name.Patterns" schema="schema/patterns.exsd"/>
    <extension-point id="accountProviders" name="%extension-point.name.AccountProviders" schema="schema/accountProviders.exsd"/>
    <extension-point id="loggingPreferences" name="Logging Preferences" schema="schema/loggingPreferences.exsd"/>
+   <extension-point id="tradingProviders" name="Trading Providers" schema="schema/tradingProviders.exsd"/>
    <extension
          point="org.eclipse.ui.actionSets">
       <actionSet
