Added orders view default values
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@707 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin_customization.ini
+++ b/net.sourceforge.eclipsetrader/plugin_customization.ini
@@ -6,6 +6,7 @@ org.eclipse.update.core/org.eclipse.update.core.updateVersions=compatible
 net.sourceforge.eclipsetrader.core/UPDATE_HISTORY_ONCE=true
 net.sourceforge.eclipsetrader.news/FOLLOW_QUOTE_FEED=true
 net.sourceforge.eclipsetrader.news/net.sourceforge.eclipsetrader.yahoo.news=true
+net.sourceforge.eclipsetrader.trading/ORDERSVIEW_COLUMNS=ordersView.tradingProvider;ordersView.orderId;ordersView.dateTime;ordersView.symbol;ordersView.security;ordersView.side;ordersView.type;ordersView.quantity;ordersView.price;ordersView.filledQuantity;ordersView.averagePrice;ordersView.status
 net.sourceforge.eclipsetrader.yahoo/international=true
 net.sourceforge.eclipsetrader.yahoo/mergersaquisitions=true
 net.sourceforge.eclipsetrader.yahoo/mostpopular=true
