Added parallel lines object (feature req. #1539327)
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@708 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.properties
+++ b/net.sourceforge.eclipsetrader.charts/plugin.properties
@@ -20,6 +20,8 @@ updateChartAction=Update Chart
 updateChartTooltip=Update chart data
 lineObjectAction=Line
 lineObjectTooltip=New line
+parallelLineObjectAction=Parallel Lines
+parallelLineObjectTooltip=New Parallel lines
 horizontalLineAction=Horizontal Line
 horizontalLineTooltip=New horizontal line
 fibolineAction=FiboLine
@@ -100,3 +102,5 @@ object.name.sellArrow = Sell Arrow
 object.name.buyArrow = Buy Arrow
 object.name.fibonacciFan = Fibonacci Fan Lines
 preferencePage.title.fibonacciFan = Fibonacci Fan Lines
+object.name.parallelLines = Parallel Lines
+preferencePage.title.parallelLines = Parallel Lines
