Added chart tabs visibility preferences
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@713 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.xml
+++ b/net.sourceforge.eclipsetrader.charts/plugin.xml
@@ -117,6 +117,14 @@
       </viewerContribution>
    </extension>
    <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="org.eclipse.ui.preferencePages.Appearance"
+            class="net.sourceforge.eclipsetrader.charts.preferences.ChartAppearancePrefereces"
+            id="net.sourceforge.eclipsetrader.charts.appearance"
+            name="Charts"/>
+   </extension>
+   <extension
          point="org.eclipse.ui.startup">
       <startup class="net.sourceforge.eclipsetrader.charts.internal.EarlyStartup"/>
    </extension>
