Added creation of multiple chart views for the same security (feat. req. #1540543)
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@718 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.xml
+++ b/net.sourceforge.eclipsetrader.charts/plugin.xml
@@ -101,7 +101,7 @@
                id="net.sourceforge.eclipsetrader.actions.openChart"
                label="%openChartAction"
                menubarPath="top"
-               style="push"/>
+               style="pulldown"/>
       </viewerContribution>
       <viewerContribution
             id="securitiesView"
@@ -113,7 +113,7 @@
                id="net.sourceforge.eclipsetrader.actions.openChart"
                label="%openChartAction"
                menubarPath="top"
-               style="push"/>
+               style="pulldown"/>
       </viewerContribution>
    </extension>
    <extension
@@ -230,6 +230,12 @@
                style="push"
                toolbarPath="objects"
                tooltip="%fibolineTooltip"/>
+         <action
+               class="net.sourceforge.eclipsetrader.charts.actions.DeleteChartAction"
+               id="net.sourceforge.eclipsetrader.charts.delete"
+               label="Delete Chart"
+               menubarPath="bottom"
+               style="push"/>
       </viewContribution>
       <viewContribution
             id="securitiesView"
