Added order validity selection and column
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@726 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -618,6 +618,9 @@
       <column
             class="net.sourceforge.eclipsetrader.trading.internal.orders.AccountColumn"
             id="ordersView.account"/>
+      <column
+            class="net.sourceforge.eclipsetrader.trading.internal.orders.ValidityColumn"
+            id="ordersView.validity"/>
    </extension>
    <extension
          point="net.sourceforge.eclipsetrader.trading.systems">
