Added OrderRoute type Added methods to get the supported order capabilities from the trading provider plugins
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@730 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -621,6 +621,9 @@
       <column
             class="net.sourceforge.eclipsetrader.trading.internal.orders.ValidityColumn"
             id="ordersView.validity"/>
+      <column
+            class="net.sourceforge.eclipsetrader.trading.internal.orders.ExchangeColumn"
+            id="ordersView.exchange"/>
    </extension>
    <extension
          point="net.sourceforge.eclipsetrader.trading.systems">
