Fixed httpclient log4j categories
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@732 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -182,7 +182,7 @@
       <logger
             defaultValue="info"
             description="Apache HttpClient"
-            name="org.apache.commons.httpclient"/>
+            name="org.apache.commons.httpclient;httpclient"/>
       <layout
             description="Extended"
             pattern="%%d{ABSOLUTE} %5p %c:%L - %m%n"/>
