Fixed build settings
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@742 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.yahoo/build.properties
+++ b/net.sourceforge.eclipsetrader.yahoo/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                categories.xml,\
                data/,\
                icons/,\
-               lib/
+               lib/,\
+               categories.fr.xml
