--- a/net.sourceforge.eclipsetrader.charts/build.properties
+++ b/net.sourceforge.eclipsetrader.charts/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                schema/,\
                icons/,\
-               plugin.properties
+               plugin.properties,\
+               data/
