--- a/net.sourceforge.eclipsetrader.trading/build.properties
+++ b/net.sourceforge.eclipsetrader.trading/build.properties
@@ -4,4 +4,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                epl-v10.html,\
-               icons/
+               icons/,\
+               plugin.properties,\
+               schema/
