Added Perspectives preferences page
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@748 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -98,6 +98,11 @@
             class="net.sourceforge.eclipsetrader.preferences.StartupShutdownPreferencesPage"
             id="net.sourceforge.eclipsetrader.startupAndShutdown"
             name="%page.name.startupAndShutdown"/>
+      <page
+            category="net.sourceforge.eclipsetrader"
+            class="org.eclipse.ui.ExtensionFactory:perspectivesPreferencePage"
+            id="org.eclipse.ui.preferencePages.Perspectives"
+            name="Perspectives"/>
    </extension>
    <extension
          point="org.eclipse.ui.views">
