Added viewLabelProviders extension point
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@750 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -7,6 +7,7 @@
    <extension-point id="accountProviders" name="%extension-point.name.AccountProviders" schema="schema/accountProviders.exsd"/>
    <extension-point id="loggingPreferences" name="Logging Preferences" schema="schema/loggingPreferences.exsd"/>
    <extension-point id="tradingProviders" name="Trading Providers" schema="schema/tradingProviders.exsd"/>
+   <extension-point id="viewLabelProviders" name="View Label Providers" schema="schema/viewLabelProviders.exsd"/>
    <extension
          point="org.eclipse.ui.actionSets">
       <actionSet
