--- a/net.sourceforge.eclipsetrader.directaworld/build.properties
+++ b/net.sourceforge.eclipsetrader.directaworld/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                epl-v10.html,\
                icons/,\
-               data/
+               data/,\
+               plugin.properties
